@@ -3,7 +3,7 @@
 # XFree86 Id: xc/config/util/xmkmf.cpp,v 1.3 2000/11/16 21:57:10 dawes Exp
 # XConsortium Id: xmkmf.cpp /main/22 1996/09/28 16:17:05 rws
 #
-# $NetBSD: pkgxmkmf.in,v 1.5 2005/06/14 07:23:56 jlam Exp $
+# $NetBSD: pkgxmkmf.in,v 1.6 2005/06/14 20:12:51 jlam Exp $
 #
 # make a Makefile from an Imakefile from inside or outside the sources
 # with support for config files in ${PREFIX}/lib/X11/config
@@ -71,11 +71,11 @@ case "$do_all" in
 yes)
     imake $imake_defines $args && 
     echo "make Makefiles" &&
-    make Makefiles &&
+    @MAKE@ Makefiles &&
     echo "make includes" &&
-    make includes &&
+    @MAKE@ includes &&
     echo "make depend" &&
-    make depend
+    @MAKE@ depend
     ;;
 *)
     imake $imake_defines $args
